# Document-Classifier-Internship

./: .gitignore  README.md  document_clustering.py  evaluation_dashboard.py  pyproject.toml  st-main.py
d2v_workflow/: File_clustering.py  d2v_document_clustering.py  d2v_evaluation.py
sentence-transformer/: st-main.py
st_workflow/: st-main.py  st_document_clustering.py  st_evaluation.py  st_main.py
