[project]
name = "dl-rl-internship"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fasttext-wheel>=0.9.2",
    "hdbscan>=0.8.40",
    "hf-transfer>=0.1.9",
    "huggingface-hub[hf-xet]>=0.33.0",
    "lxml>=5.4.0",
    "matplotlib>=3.10.3",
    "nltk>=3.9.1",
    "pdfminer-six>=20250506",
    "python-docx>=1.1.2",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=4.1.0",
    "umap-learn>=0.5.7",
]
